# mcp-cloup

./: README.md  pyproject.toml
src/mcp_cloup/: setup.py
tests/: cli.py  server.py  test_tools.py
